plugins {
    id("java")
    `java-library`
    `maven-publish`
    // CLI-утилита конвертации (org.tehlab.whitek0t.fictionbook.cli.FictionBookCli):
    // даёт задачи run/installDist. Сама библиотека остаётся библиотекой —
    // приложение лишь связывает публичные фасады.
    application
    // JMH-бенчмарки: исходники в src/jmh/java, запуск через ./gradlew jmh
    id("me.champeau.jmh") version "0.7.3"
}

application {
    mainClass.set("org.tehlab.whitek0t.fictionbook.cli.FictionBookCli")
    applicationName = "fb"
}

group = "org.tehlab.whitek0t"
version = "1.0-SNAPSHOT"

java {
    withSourcesJar()
    withJavadocJar()
}

// Билд идёт на любом установленном JDK >= 21 (toolchain намеренно не используем,
// чтобы не привязываться к одной конкретной версии). release = 21 гарантирует,
// что артефакты остаются совместимы с Java 21 и не используют API новее 21.
tasks.withType<JavaCompile>().configureEach {
    options.release.set(21)
}

// Javadoc: оставляем строгими структурные проверки doclint (битые {@link}-ссылки,
// некорректный HTML, синтаксис) — именно они ловят реальные баги документации. Но не
// требуем javadoc-комментарий на каждый член: большинство классов в internal/ — деталь
// реализации, описывать каждое поле Jackson-DTO смысла нет. Группа -missing убирает
// шум «no comment / no @param / no @return / no main description».
tasks.withType<Javadoc>().configureEach {
    (options as StandardJavadocDocletOptions)
        .addBooleanOption("Xdoclint:all,-missing", true)
}

repositories {
    mavenCentral()
}

dependencies {

    // Source: https://mvnrepository.com/artifact/io.freefair.lombok/io.freefair.lombok.gradle.plugin
    implementation("io.freefair.lombok:io.freefair.lombok.gradle.plugin:9.5.0")

    // 1. Jackson XML для парсинга <description> и метаданных FB3
    // Он автоматически подтягивает Woodstox (самый быстрый StAX парсер на Java).
    // Это даст нам буст скорости и для нашего ручного StAX парсинга тела книги!
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.21.3")

    // Source: https://mvnrepository.com/artifact/com.googlecode.juniversalchardet/juniversalchardet
    implementation("com.googlecode.juniversalchardet:juniversalchardet:1.0.3")

    // 2. Тестирование
    testImplementation(platform("org.junit:junit-bom:5.10.2"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
    testImplementation("org.assertj:assertj-core:3.27.7")
    testImplementation("net.jqwik:jqwik:1.8.4")  // Property-based testing

    // 3. SLF4J для логгирования (API без реализации, чтобы не навязывать зависимость юзерам)
    implementation("org.slf4j:slf4j-api:2.0.13")
    // SLF4J простая реализация для тестов
    testImplementation("org.slf4j:slf4j-simple:2.0.13")
}

tasks.test {
    useJUnitPlatform()
}

// JMH: фиксируем версию ядра и задаём «лёгкий» дефолтный прогон. Для точных цифр
// поднять warmup/iterations/fork прямо в этом блоке.
jmh {
    jmhVersion.set("1.37")
    warmupIterations.set(3)
    iterations.set(5)
    fork.set(1)
}

/*
publishing {
    publications {
        create<MavenPublication>("maven") {
            groupId = "org.tehlab.whitek0t"
            artifactId = "fictionbook"
            version = project.version.toString()
            from(components["java"])

            pom {
                name.set("FictionBook Library")
                description.set("Java library for reading and writing FB2/FB3 files")
                url.set("https://github.com/WhiteK0T/fictionbook")
            }
        }
    }
}*/
